# bevy_gradient_background

./: Cargo.toml  README.md
assets/shaders/: gradient.wgsl
examples/: example.rs
src/: lib.rs
